# FeedbackArcSetProblem

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.sh  opt.sh
approximate/: CMakeLists.txt
approximate/src/: alns.cpp  alns.h  alns_acceptors.cpp  alns_acceptors.h  alns_builders.cpp  alns_builders.h  alns_local_search.cpp  alns_local_search.h  alns_operators.cpp  alns_operators.h  alns_selectors.cpp  alns_selectors.h  alns_shake.cpp  alns_shake.h  builders.cpp  builders.h  ea.cpp  ea.h  exact.cpp  exact.h  graph.cpp  graph.h  hill_climber.cpp  hill_climber.h  main.cpp  modifiers.cpp  modifiers.h  save.cpp  save.h  solvers.cpp  solvers.h  state.cpp  state.h  utils.cpp  utils.h
data/approximate/: time.txt
data/approximate/instances/: 2.txt
data/context/: mapper.txt
data/context/instances/: 0.txt  1.txt
data/instances/: 0.txt  3.txt  4.txt
data/optimal/instances/: 1.txt  2.txt  5.txt
data/optimal/solutions/: 0.txt  3.txt  4.txt
data/solutions/: 2.txt  5.txt
optimal/: Makefile
optimal/data/solutions/: 1.txt
optimal/src/: graph.h  milp.cpp  solve.cpp
src/: approximate.cpp  graph.cpp  graph.h  graph.hpp  milp.cpp  milp.h  optimal.cpp
src/approximate/: builders.cpp  builders.h  ea.h  graph.cpp  graph.h  heuristic.cpp  heuristic.h  main.cpp  modifiers.cpp  modifiers.h  solution.cpp  solve.cpp  solvers.cpp  solvers.h  state.cpp  state.h  utils.cpp  utils.h
src/optimal/: solution.h
test/: gurobi.cpp
